--- a/Inheritance/Inheritance.csproj
+++ b/Inheritance/Inheritance.csproj
@@ -42,6 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Available.cs" />
+    <Compile Include="Book.cs" />
+    <Compile Include="LibraryItem.cs" />
+    <Compile Include="Media.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
